# sorrd

./: README.md  modules.config.example  pyproject.toml
sorrd/: agent.py  cli.py  utils.py
