[tool.poetry]
name = "sorrd"
version = "0.1.0"
description = ""
authors = ["Ken Levasseur <klevasseuriv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rrdtool = "^0.1.15"
easysnmp = "^0.2.5"
click = "^8.0.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
pytest = "^7.0.1"

[tool.poetry.scripts]
sorrd = 'sorrd.cli:sorrd_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
